# openapi.json
@@ -28,7 +28,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DocumentWithEmbedding"
+                  "$ref": "#/components/schemas/Embedding"
                 }
               }
             }
@@ -79,7 +79,7 @@
               "application/json": {
                 "schema": {
                   "items": {
-                    "$ref": "#/components/schemas/DocumentWithEmbedding"
+                    "$ref": "#/components/schemas/Embedding"
                   },
                   "type": "array",
                   "title": "Response Create Embeddings Api Embeddings Many Post"
@@ -110,29 +110,25 @@
     "schemas": {
       "Document": {
         "properties": {
-          "content": {
-            "type": "string",
-            "title": "Content"
-          },
           "meta": {
             "additionalProperties": true,
             "type": "object",
             "title": "Meta"
+          },
+          "content": {
+            "type": "string",
+            "title": "Content"
           }
         },
         "type": "object",
         "required": [
-          "content",
-          "meta"
+          "meta",
+          "content"
         ],
         "title": "Document"
       },
-      "DocumentWithEmbedding": {
+      "Embedding": {
         "properties": {
-          "content": {
-            "type": "string",
-            "title": "Content"
-          },
           "meta": {
             "additionalProperties": true,
             "type": "object",
@@ -148,11 +144,10 @@
         },
         "type": "object",
         "required": [
-          "content",
           "meta",
           "embedding"
         ],
-        "title": "DocumentWithEmbedding"
+        "title": "Embedding"
       },
       "HTTPValidationError": {
         "properties": {
